@@ -66,6 +66,7 @@ IPRINT
 JOIN
 LETTER
 LIST
+LOCAL
 LOCKS
 LOWERCASE
 LSARGS
